--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,6 +1,7 @@
 python:
   # Install our python package before building the docs
   install:
+    - requirements: requirements.txt
     - method: pip
       path: .
       
